--- a/egoroff/egoroff/Cargo.toml
+++ b/egoroff/egoroff/Cargo.toml
@@ -14,6 +14,9 @@ clap = { version = "4.5.27", features = ["std", "color", "suggestions", "cargo"]
 serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["full"] }
 
+[target.'cfg(target_os = "linux")'.dependencies]
+mimalloc-rust = "0.2.1"
+
 [features]
 migrating = ["migrate"]
 
