--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -14,8 +14,8 @@ serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 mime_guess = "2"
-axum = { version = "0.8.1", features = ["multipart", "http2"] }
-axum-extra = { version = "0.10.0", features = ["typed-header"] }
+axum = { version = "0.8.3", features = ["multipart", "http2"] }
+axum-extra = { version = "0.10.1", features = ["typed-header"] }
 tower-sessions = { workspace = true }
 axum-login = "0.17.0"
 tokio-util = { workspace = true, features = ["full"] }
@@ -25,9 +25,8 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tracing = "0.1"
 tower = { version = "0.5", features = ["util", "timeout"] }
 tower-http = { version = "0.6", features = ["add-extension", "trace", "cors", "limit", "compression-gzip", "validate-request", "auth"] }
-askama = { version = "0.12.1", default-features = false, features = ["with-axum", "mime", "mime_guess", "config", "humansize", "num-traits", "urlencode"] }
-askama_derive = "0.12.5"
-askama_axum = "0.4.0"
+askama = { version = "0.13.0", default-features = false, features = ["config", "alloc"] }
+askama_derive = "0.13.0"
 rust-embed = { version = "8", features = ["include-exclude"] }
 anyhow = { workspace = true }
 chrono = { workspace = true, default-features = false, features = ["serde", "clock", "std"]}
