--- a/egoroff/egoroff/Cargo.toml
+++ b/egoroff/egoroff/Cargo.toml
@@ -10,12 +10,12 @@ workspace = ".."
 kernel = { path = "../kernel" }
 server = { path = "../server" }
 migrate = { path = "../migrate", optional = true }
-clap = { version = "4.5.34", features = ["std", "color", "suggestions", "cargo"] }
+clap = { version = "4.5.35", features = ["std", "color", "suggestions", "cargo"] }
 serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["full"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
-mimalloc = "0.1.44"
+mimalloc = "=0.1.44"
 
 [features]
 migrating = ["migrate"]
