--- a/egoroff/.cargo/config.toml
+++ b/egoroff/.cargo/config.toml
@@ -13,7 +13,7 @@
 #]
 
 [target.'cfg(target_os = "linux")']
-rustflags = ["-Clink-arg=-fuse-ld=lld", "-Ctarget-cpu=native"]
+rustflags = ["-Clink-arg=-fuse-ld=lld"]
 
 [unstable]
 rustflags = ["-Zsanitizer=leak", "-Clink-arg=-fuse-ld=lld"]
