--- a/ui/package.json
+++ b/ui/package.json
@@ -27,7 +27,8 @@
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.6.5",
     "vue-social-sharing": "^3.0.9",
-    "vue-typescript-inject": "^0.3.1"
+    "vue-typescript-inject": "^0.3.1",
+    "vue2-filters": "^0.14.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.33.0",
