--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -18,6 +18,7 @@ axum = { version = "0.8.4", features = ["multipart", "http2"] }
 axum-extra = { version = "0.10.1", features = ["typed-header"] }
 tower-sessions = { workspace = true }
 axum-login = "0.18.0"
+axum-prometheus = "0.9.0"
 tokio-util = { workspace = true, features = ["full"] }
 futures = { workspace = true }
 futures-util = "0.3"
